--- a/index.html
+++ b/index.html
@@ -1174,9 +1174,9 @@
         <div class="loading-star-container">
             <div class="loading-star"></div>
         </div>
-        <p class="loading-text" id="loadingText1">🌌 Glimpsing distant constellations...</p>
-        <p class="loading-text" id="loadingText2">💫 Stirring ancient magic...</p>
-        <p class="loading-text" id="loadingText3">💖 Crafting a universe just for you...</p>
+        <p class="loading-text" id="loadingText1">💫 Catching constellations like whispered dreams...</p>
+        <p class="loading-text" id="loadingText2">🌙 Summoning stardust secrets...</p>
+        <p class="loading-text" id="loadingText3">💖 Dream-weaving your perfect little corner of the stars...</p>
     </div>
 
     <div id="particle-overlay"></div>
@@ -1192,14 +1192,14 @@
         <div class="popup-card" id="popupClickArea" role="button" aria-label="Click to unwrap birthday surprise">
             <img class="gif-top" src="https://media.tenor.com/6yBqtjeP1ekAAAAj/bubu-dudu-sseeyall.gif" alt="Bubu Dudu See Ya!" loading="lazy">
             <img class="gif-main" src="https://media.tenor.com/s5AoXjOy4NsAAAAj/birthday-cake.gif" alt="Birthday Cake GIF" loading="lazy">
-            <h2>A Gentle Tap to Begin Your Dreamy Birthday Journey, Quackers! ✨</h2>
-            <p>Click anywhere to unveil a universe crafted just for you.</p>
+            <h2>💫 Ready to float into birthday magic, Quackers? Just one tap away!</h2>
+            <p>Touch the screen and let the stars part — your dreamy birthday adventure (and Doofy) await! 🌌💫</p>
         </div>
     </div>
 
     <main class="content hidden" id="mainContent">
-        <h1 class="content-block hidden" id="mainTitle">Happy Birthday, my cherished Quackers! <span aria-hidden="true">💖</span></h1>
-        <p class="music-hint hidden" id="musicHint">🎶 Listen closely, this melody is just for you... 💖</p>
+        <h1 class="content-block hidden" id="mainTitle">Happy Birthday, my dazzling duck of delight! <span aria-hidden="true">💖</span></h1>
+        <p class="music-hint hidden" id="musicHint">🎶 Trust me — your birthday soundtrack is magical. Just listen.... 🌸🎧</p>
 
 
         <div class="gif-inline-container content-block hidden" id="gifBlock1">
@@ -1209,11 +1209,11 @@
         <p class="message content-block hidden" id="messageBlock1"></p>
 
         <div class="button-group content-block hidden" id="chapter1ButtonGroup">
-            <button id="startJourneyBtn" class="btn hidden"><span>Begin Our Journey 💖</span></button>
+            <button id="startJourneyBtn" class="btn hidden"><span>🪄 Wiggle Into Wonder With Me</span></button>
         </div>
 
         <div id="loveMeter" class="content-block hidden">
-            <p class="love-meter-title">Doofy’s Celestial Path of Affection</p>
+            <p class="love-meter-title">🌙 Doofy’s Starry Trail of Love</p>
             <div class="ribbon-container">
                 <div class="shimmering-ribbon" id="loveProgressBar"></div>
                 <div class="love-star-node" style="left: 0%;" data-level="0"></div>
@@ -1222,7 +1222,7 @@
                 <div class="love-star-node" style="left: 75%;" data-level="75"></div>
                 <div class="love-star-node" style="left: 100%;" data-level="100"></div>
             </div>
-            <p id="loveStatusMessage" class="love-status-message">A tender whisper of budding affection. ✨ (Love: <span id="loveCount">0</span>%)</p>
+            <p id="loveStatusMessage" class="love-status-message">🌙 The starlit sigh of affection waking up. (Love: <span id="loveCount">0</span>%)</p>
         </div>
 
         <div class="gif-inline-container content-block hidden" id="gifBlock2">
@@ -1230,8 +1230,8 @@
         </div>
 
         <div class="button-group content-block hidden" id="chapter2ButtonGroup">
-            <button id="hugBtn" class="btn hidden"><span>Send a Gentle Embrace 🤗</span></button>
-            <button id="complimentsBtn" class="btn hidden"><span>Offer a Thoughtful Compliment ✨</span></button>
+            <button id="hugBtn" class="btn hidden"><span>💖 Boop With Affection</span></button>
+            <button id="complimentsBtn" class="btn hidden"><span>🪄 Cast a Flattering Spell</span></button>
         </div>
 
         <div class="content-section hidden" id="hugContentWrapper">
@@ -1242,7 +1242,7 @@
         </div>
 
         <div class="button-group content-block hidden" id="chapter3ButtonGroup">
-            <button id="makeAWishBtn" class="btn hidden"><span>Make a Wish! 🌠</span></button>
+            <button id="makeAWishBtn" class="btn hidden"><span>Cast Your Wish ✨</span></button>
         </div>
 
         <div class="content-section hidden" id="makeAWishContentWrapper">
@@ -1250,31 +1250,30 @@
         </div>
 
         <div class="button-group content-block hidden" id="chapter4ButtonGroup">
-             <button id="whispersOfStarlightBtn" class="btn hidden"><span>Whispers of Starlight 💫</span></button>
+             <button id="whispersOfStarlightBtn" class="btn hidden"><span>Starlight Murmurs ✨</span></button>
         </div>
 
         <div class="button-group content-block hidden" id="finalChapterButtonGroup">
-            <button id="finalMessageBtn" class="btn hidden disabled"><span>Unveil My Heart's True Message ❤️</span></button>
+            <button id="finalMessageBtn" class="btn hidden disabled"><span>A Love Note, Just for You ✨❤️</span></button>
         </div>
 
-        <footer>Always your devoted Doofy 🐾💖</footer>
+        <footer>With all my silly love, Doofy 🐾✨</footer>
     </main>
 
     <div id="confettiLayer"></div>
-    <div class="wish-text-prompt hidden" id="wishPrompt">🌠 Make your wish... 🌠</div>
+    <div class="wish-text-prompt hidden" id="wishPrompt">✨ Wish upon this little spark of magic...</div>
     <div id="meteorShowerContainer" style="position: fixed; inset: 0; pointer-events: none; z-index: 998;"></div>
     <div id="whispersContainer" style="position: fixed; inset: 0; pointer-events: none; z-index: 100;"></div>
 
     <div id="finalMessageOverlay" class="hidden">
         <div class="final-message-card">
-            <h2>🌙 You're Someone I’m Grateful to Know</h2>
-            <p>
-                Quackers, today’s about you — and I just want to say thank you. <br><br>
-                For being steady. For being kind. For being you. <br><br>
-                I hope your day brings you calm moments, quiet joy, and a smile that sticks around longer than expected. <br><br>
-                You make things softer and safer — and that means something. <br><br>
-                Happy Birthday 💛<br>
-                — Doofy 🐾
+            <h2>💫 So lucky the stars led me to you</h2>
+            <p>Quackers, today the stars hum your name and the universe twirls in celebration! ✨<br><br>
+Thank you for being the magic in my every day — the brilliant brain behind the plans, the soft heart that keeps me grounded, and the reason I smile like a dork. <br><br>
+May your birthday bring glittery joy, surprise giggles, and all the calm your gentle heart deserves (plus a dash of chaos, because... me).<br><br>
+You make the world kinder, cozier, and so wonderfully weird in all the best ways. <br><br>
+Happy Birthday, my radiant duck queen 💫<br>
+— Your forever Doofy 🐾💖
             </p>
             <button id="nextRealmBtn" class="btn"><span>Let's Go to the Next Realm ✨</span></button>
         </div>
@@ -1350,31 +1349,33 @@
                 "https://media.tenor.com/YfaICXGzuSoAAAAj/i-love-you-i-missed-you.gif"
             ];
 
-            const compliments = [
-                "You're a beacon of calm in a chaotic world. 🧘‍♀️",
-                "Your kindness shines brighter than any star. ✨",
-                "The quiet strength you possess is truly inspiring. 💪",
-                "You bring a gentle warmth to every moment. 🔥",
-                "Your presence is a comforting melody.🎶",
-                "You have a heart of gold, pure and true.💛",
-                "Simply being yourself makes the world a better place.🌍",
-                "Your empathy is a rare and beautiful gift.🎁",
-                "You're as refreshing as a cool breeze on a summer day.🌬️",
-                "May your day be filled with as much joy as you give to others.😊"
-            ];
+           const compliments = [
+  "You make the world feel softer, just by being in it. 💗",
+  "Your smile is my favorite kind of sunrise. 🌅😊",
+  "You have the rare magic that turns ordinary days into something unforgettable. ✨",
+  "You bring out the calm in my storms, every single time. ☁️☀️",
+  "The way you care is its own kind of beautiful. 🌷💖",
+  "You make love feel like the safest, happiest place. 🏡💫",
+  "You’re my favorite kind of wonder — gentle, bright, and endlessly kind. 🌈🌟",
+  "Being with you feels like a cozy story I never want to end. 📖🦢",
+  "Even in silence, you say so much — and all of it feels like home. 🛋️💕",
+  "You’re the reason ordinary moments turn into treasured memories. 🫶✨"
+];
 
-            const whisperMessages = [
-                "✨ Some people bring peace just by being there. You're one of them.",
-                "💫 A gentle sparkle spell for the most respected person, echoing through the cosmos!",
-                "🌌 Doofy's Aura of Calm activated — your peace is MAXED, a celestial blessing!",
-                "⭐ Your quiet radiance outshines the softest dawn, a universe of brilliance!",
-                "💖 Doofy's heart sends boundless affection, filling your cosmic space with joy!",
-                "🌟 May tranquility descend upon you, a starlight blessing from Doofy's devotion!",
-                "✨ A shower of pure, serene joy just for you, shimmering with Doofy's enchantment!"
-            ];
+           const whisperMessages = [
+  "🌙 Just your presence brings calm to the universe — and to me.",
+  "💫 A starlit spell of serenity, whispered from Doofy’s heart to yours.",
+  "🦋 Doofy’s magic floats in — soft, sparkly, and full of quiet love.",
+  "🌌 You glow brighter than constellations, and the cosmos notices. Always.",
+  "✨ Wrapped in a gentle charm: peace, warmth, and a galaxy of affection from me to you.",
+  "🌠 A breeze of moonlight magic swirls around you — courtesy of one devoted Doofy.",
+  "💖 If comfort had a name, it’d be yours — and every star agrees.",
+];
 
-            const mainStoryMessage = "Hey sweet Quackers! 🦆\n\nYour Doofy here, enveloping you in *gentle* embrace energy and warm smiles!\nJust like these adorable companions, I'm genuinely thrilled to celebrate the wonderful person you are today.\nYou’re the quiet strength in my life, the most comforting presence, and the sweetest reason to cherish every moment.\n\nMay this special day bring gentle laughter, tender solace, and a heart overflowing with quiet joy. 💕";
-            const wishConfirmationMessage = "Your wish has soared into the cosmos, gathering stardust and dreams! ✨ May it manifest into the gentle joys you deserve.";
+            const mainStoryMessage = "Hi my dearest Quackers! 🦆💛\n\nIt’s your Doofy, sending sparkly hugs and heart-bursting affection across the stars! ✨\nLike the cuddly little companions beside you, I'm absolutely *glowing* with joy to celebrate the magical soul you are.\nYou’re the calm in my chaos, the light in my orbit, and the sweetest reason the universe feels warm and kind.\n\nMay your birthday be wrapped in stardust giggles, moonbeam cuddles, and the quiet kind of joy that lingers like a melody. 💖";
+
+            const wishConfirmationMessage = "Your wish has taken flight on moonbeams and magic, gathering sparkle with every star it touches. 🌠 May it return to you wrapped in wonder and joy, just as you deserve.";
+
 
             // --- State Variables ---
             let loveCount = 0;
