--- a/law.html
+++ b/law.html
@@ -191,7 +191,7 @@
 
         /* Hero Section Background */
         .hero-section {
-            background: linear-gradient(rgba(10, 10, 15, 0.98), rgba(10, 10, 15, 0.98)), url('ll14.png');
+            background: linear-gradient(rgba(10, 10, 15, 0.8), rgba(10, 10, 15, 0.8)), url('ll14.png'); /* Adjusted opacity to 0.8 */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -315,11 +315,16 @@
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3); /* Subtle inner shadow */
         }
         .award-logo-img {
-            filter: grayscale(100%) brightness(200%); /* Lighten and desaturate for dark theme */
-            transition: filter 0.4s ease;
+            /* Removed grayscale and brightness filters to make images colored */
+            /* Increased size for better visibility */
+            width: 128px; /* w-32 */
+            height: 128px; /* h-32 */
+            object-fit: contain;
+            margin: auto; /* Center the image */
+            transition: transform 0.4s ease; /* Added transition for hover effect */
         }
         .award-card:hover .award-logo-img {
-            filter: grayscale(0%) brightness(100%); /* Color on hover */
+            transform: scale(1.1); /* Slightly zoom on hover */
         }
         
         .news-item-card {
